added in html - h1 tag

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <h1>when sections color will be blue, the player is win</h1>
     <main>
         <div class="sections">
             <section class="player player--0 player--active">
